# ws90-prometheus

./: .gitignore  LICENSE  PKGBUILD  README.md  pyproject.toml  requirements.txt  rtl433-meteo.confd  rtl433-meteo.initd  rtl433-meteo.service  ws90-prometheus.py  ws90-prometheus.service  ws90-prometheus@.service
fake/: fake.py
grafana/: rtl433-meteo.json
rtl433_meteo/: __init__.py  cli.py  daemon.py  publish_prom.py  publish_vm.py  resettable_timer.py  rtl_reader.py  stations.py
tests/: conftest.py  test_publish_prom.py  test_publish_vm.py  test_rtl_reader.py  test_stations.py
ws90_prometheus/: __init__.py  daemon.py  publish_prom.py  publish_vm.py  rtl_reader.py
